Pull request #1314: fix sidebar buttons & logo
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 6d797329ef230f74b4f1c6a3853eb08636c3348d
Merge: 7d584c863 d018f2786
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Aug 8 12:51:41 2022 +0300

    merge

commit 7d584c86373b030c4ab4c2134637246261428ca9
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Aug 2 11:51:51 2022 +0300

    AG-15678 fix sidebar buttons & logo

--- a/Extension/src/pages/common/styles/icons.pcss
+++ b/Extension/src/pages/common/styles/icons.pcss
@@ -40,8 +40,8 @@
     }
 
     &--logo {
-        width: 109px;
-        height: 24px;
+        width: 126px;
+        height: 28px;
         color: #232323;
 
         @media (prefers-color-scheme: dark) {
