--- a/Extension/src/pages/options/components/Nav/nav.pcss
+++ b/Extension/src/pages/options/components/Nav/nav.pcss
@@ -5,8 +5,9 @@
     padding: 24px 0;
 
     &__item {
-        padding: 12px 38px;
-        line-height: 19px;
+        padding: 10px 38px;
+        margin-bottom: 14px;
+        line-height: 20px;
         color: var(--gray-base);
         text-decoration: none;
         display: inline-block;
