--- a/Extension/src/pages/options/components/Sidebar/sidebar.pcss
+++ b/Extension/src/pages/options/components/Sidebar/sidebar.pcss
@@ -80,7 +80,7 @@
         }
 
         &__logo {
-            margin: 0 0 24px 37px;
+            margin: 0 0 26px 37px;
         }
 
         &__overlay {
